--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,34 @@
 = pairtree
 
-Ruby Pairtre implementation
+Ruby Pairtree implementation
 
-== Contributing to pairtree
+== Usage
  
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
-
+  # Initiate a tree
+  pt = Pairtree::Client.new('./data', :prefix => 'pfx:')
+  root = pt.root
+  
+  # Create a ppath
+  obj = root.mk('pfx:abc123def')
+  
+  # Access an existing ppath
+  obj = root['pfx:abc123def']
+  obj = root.get('pfx:abc123def')
+  
+  # ppaths are Dir instances with some File and Dir class methods mixed in
+  obj.read('content.xml')
+  => "<content/>"
+  obj.open('my_file.txt','w') { |io| io.write("Write text to file") }
+  obj.entries
+  => ["content.xml","my_file.txt"]
+  obj['*.xml']
+  => ["content.xml"]
+  obj.each { |file| ... }
+  obj.unlink('my_file.txt')
+  
+  # Delete a ppath and all its contents
+  root.purge!('pfx:abc123def')
+  
 == Copyright
 
 Copyright (c) 2010 Chris Beer. See LICENSE.txt for
