Converted README from rdoc to textile

--- a/README.textile
+++ b/README.textile
@@ -1,19 +1,19 @@
-= pairtree
+h1. pairtree
 
-Ruby Pairtree implementation
+Ruby implementation of the "Pairtree":https://confluence.ucop.edu/display/Curation/PairTree microservice specification from the California Digital Library
 
-== Usage
- 
+h2. Usage
+
+<pre><code>
   # Initiate a tree
-  pt = Pairtree::Client.new('./data', :prefix => 'pfx:')
-  root = pt.root
+  pairtree = Pairtree.at('./data', :prefix => 'pfx:', :create => true)
   
   # Create a ppath
-  obj = root.mk('pfx:abc123def')
+  obj = pairtree.mk('pfx:abc123def')
   
   # Access an existing ppath
-  obj = root['pfx:abc123def']
-  obj = root.get('pfx:abc123def')
+  obj = pairtree['pfx:abc123def']
+  obj = pairtree.get('pfx:abc123def')
   
   # ppaths are Dir instances with some File and Dir class methods mixed in
   obj.read('content.xml')
@@ -27,9 +27,10 @@ Ruby Pairtree implementation
   obj.unlink('my_file.txt')
   
   # Delete a ppath and all its contents
-  root.purge!('pfx:abc123def')
+  pairtree.purge!('pfx:abc123def')
+</code></pre>
   
-== Copyright
+h2. Copyright
 
 Copyright (c) 2010 Chris Beer. See LICENSE.txt for
 further details.
